2025-05-17T00:54:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15079947974 # 646
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-17
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 534 927 / 547 940
* notice: next accum: outdated-unq outdated-all / unq all: 535 928 / 548 941
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-05-02] / [2025-05-16]

2025-05-16T00:55:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15058215992 # 645
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-16
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 533 926 / 545 938
* notice: next accum: outdated-unq outdated-all / unq all: 534 927 / 547 940
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-05-01] / [2025-05-15]

2025-05-15T00:53:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15034141621 # 644
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-15
* notice: last 14d: unq all: 2 12
* notice: prev accum: outdated-unq outdated-all / unq all: 532 925 / 544 937
* notice: next accum: outdated-unq outdated-all / unq all: 533 926 / 545 938
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-30] / [2025-05-14]

2025-05-14T00:54:53Z: