@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-17T00:54:04Z",
-  "count_outdated" : 928,
-  "uniques_outdated" : 535,
-  "count" : 941,
-  "uniques" : 548,
+  "timestamp" : "2025-05-19T00:58:07Z",
+  "count_outdated" : 929,
+  "uniques_outdated" : 536,
+  "count" : 942,
+  "uniques" : 549,
   "clones" : [
-    {
-      "timestamp": "2025-05-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-05-07T00:00:00Z",
       "count": 1,
@@ -97,6 +88,15 @@
     },
     {
       "timestamp": "2025-05-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
