@@ -1,3 +1,12 @@
+2025-05-19T00:58:07Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15101955180 # 648
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-19
+* notice: last 14d: unq all: 3 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 535 928 / 548 941
+* notice: next accum: outdated-unq outdated-all / unq all: 536 929 / 549 942
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-05-04] / [2025-05-18]
+
 2025-05-17T00:54:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15079947974 # 646
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-17
